<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activitys.MainActivity"
    tools:showIn="@layout/activity_main">
<TextView
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:text="@string/splash_description"
    android:textSize="17sp"
    android:textColor="@android:color/white"
    android:background="@android:color/black"
    android:gravity="center"
    />
<TextView
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:text="@string/main_second_title_text"
    android:textColor="@android:color/white"
    android:textSize="16sp"
    android:background="@drawable/titlebar"
    android:gravity="center"
    />
<ListView
    android:layout_marginTop="25dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_weight="1"
    android:divider="#00000000"
    android:dividerHeight="5dp"
    android:id="@+id/lv_comments"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#f5f5f5"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#e5e5e5"
            />
        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/main_observer_text"
            android:id="@+id/et_observer"
            android:padding="4dp"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/quxiaobackground"
            />
        <EditText
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/main_comment_content_text"
            android:id="@+id/et_comment_content"
            android:gravity="left"
            android:padding="4dp"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/quxiaobackground"
            />
        <Button
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="40dp"
            android:id="@+id/btn_add_comment"
            android:text="@string/main_button_comment_text"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:background="#e5511e"
            android:layout_marginBottom="30dp"
            />
    </LinearLayout>
</LinearLayout>
